fix(backend): resolve IDE syntax errors and lombok warnings